# vector-db-api

./: .gitignore  DOCKER_SETUP.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: ci.yml  release.yml
scripts/: docker-scripts.sh  validate-docker-setup.py
src/: __init__.py
src/vector_db_api/: main.py  settings.py
src/vector_db_api/api/: deps.py  dto.py  errors.py
src/vector_db_api/api/routers/: chunks.py  documents.py  health.py  libraries.py  search.py
src/vector_db_api/concurrency/: __init__.py  locks.py
src/vector_db_api/indexing/: __init__.py  base.py  flat.py  ivf.py  lsh.py  registry.py  utils.py
src/vector_db_api/models/: entities.py  indexing.py  metadata.py
src/vector_db_api/repos/: __init__.py  chunks.py  documents.py  libraries.py
src/vector_db_api/services/: chunk.py  document.py  exceptions.py  library.py  search.py
tests/: conftest.py  run_tests.py
tests/integration/: test_app_integration.py  test_cohere_embeddings.py
tests/unit/: test_main.py
tests/unit/concurrency/: test_locks.py
tests/unit/indexing/: test_base.py  test_flat.py  test_ivf.py  test_lsh.py  test_registry.py
tests/unit/repos/: test_chunks.py  test_documents.py  test_libraries.py
tests/unit/routers/: __init__.py  test_chunks.py  test_documents.py  test_health.py  test_libraries.py  test_search.py
tests/unit/services/: test_chunk.py  test_document.py  test_library.py  test_search.py
